# Temporal-AA_example

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Portfolio.sln  README.txt
TAA standalone/examples/TemporalAA/: imgui.ini
TAA standalone/resources/shaders/: Compare.frag  Default.vert  Jitter.vert  Model.vert  Smooth.frag  SpeedTree.frag  TemporalAA.txt  Textured.frag
dependencies/gli/: gli.sln  gliConfig.cmake  gliTargets.cmake  gliVersion.cmake  man.doxy  releases.md
dependencies/gli/gli/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  gli_dummy.vcxproj  gli_dummy.vcxproj.filters
dependencies/tinyclock/: README.md
dependencies/tinyclock/Example/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  Example.cpp  INSTALL.vcxproj  INSTALL.vcxproj.filters  TinyClock_Example.sln  TinyClock_Example.vcxproj  TinyClock_Example.vcxproj.filters
dependencies/tinyclock/Include/: TinyClock.h
dependencies/tinyextender/Example/: TinyExtender_Example.sln
dependencies/tinysamplers/: README.md  tinySamplers.vcxproj.filters
dependencies/tinysamplers/Include/: TinySamplers.h
dependencies/tinyshaders/Include/: TinyShaders.h
dependencies/tinywindow/Example/: Example.cpp
dependencies/tinywindow/Example/dependencies/assimp/: DartConfiguration.tcl  assimp.pc  revision.h
dependencies/tinywindow/Example/dependencies/assimp/contrib/zlib/: zlib.pc
dependencies/tinywindow/Include/: TinyWindow.h
examples/TemporalAA/: CMakeLists.txt  Scene_Example.sln  imgui.ini
examples/TemporalAA/include/: TemporalAA.h
examples/TemporalAA/source/: TemporalAA.cpp
include/: Buffer.h  Camera.h  DefaultUniformBuffer.h  FrameBuffer.h  GPUQuery.h  Grid.h  HaltonSequence.h  Light.h  Model.h  Ray.h  ResourceManager.h  Scene.h  Scene3D.h  Texture.h  TextureSettings.h  TexturedScene.h  TinyModels.h  Transform.h  UniformBuffer.h  Utilities.h  VertexAttribute.h  VertexBuffer.h
resources/models/fbx_foliage/broadleaf_field/: Broadleaf_Desktop_Field.FBX  Broadleaf_Desktop_Field_Color_Tex.TGA  Main_Bark_Color_Tex.TGA
resources/shaders/: Jitter.vert  Velocity.frag
